k8s/k8s-ingress-fix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoshare-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: photoshare-api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photoshare-web
            port:
              number: 80
